src/app/features/chat/message-input/message-input.component.scss
@use 'variables' as *;

:host {
  display: flex;
  padding: 4px;
  background: rgba(24, 24, 27, 0.42);
  gap: 10px;
  align-items: center;

  textarea {
    flex-grow: 1;
    padding: 4px;
    resize: none;
    border: 1px solid transparent;
    border-radius: 6px;
    height: 64px;
    font-family: inherit;
    font-size: 0.875rem;
    background: #00000044;
    transition: border-color 0.2s ease;

    &:focus {
      outline: none;
      box-shadow: 0 0 0 2px rgba(0, 123, 255, 0.25);
    }

    &::placeholder {
      color: #999;
    }
  }
}

:host ::ng-deep .p-button {
  height: 64px;
}

